--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-  <header>
+  <header class="header">
   	<h1>matthew noesen</h1>
   	<h2>software engineer</h2>
   	<h3 class="tagline">a little bit about me:</h3>
@@ -19,7 +19,7 @@
   		 <li>HTML</li>
   		 <li>CSS</li>
   		 <li>Javascript</li>
-  	   </ul>
+  	   </ul> 
   	<wrapper class="contact">
   	  <h3>drop me a line sometime</h3>
   	  <p><a href="https://www.linkedin.com/in/matthewnoesen">click here</a> to get in touch with me on LinkedIn!</p>
