--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,15 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-  <header class="header">
+  <div class="header">
   	<h1>matthew noesen</h1>
   	<h2>software engineer</h2>
-  	<h3 class="tagline">a little bit about me:</h3>
+  </div>	
+  	<tagline class="tagline">
+  	  <h3>a little bit about me:</h3>
   		  <p>i'm an aspiring developer who made a major left turn after earning his MBA from michigan | ross in 2012.<br>  passionate about entrepreneurship, i've participated in multiple startups, including founding hansen noesen <br> property holdings, llc, with my spouse in 2012.</p>
-  	<div class="skills">
+  	</tagline>
+ <div class="skills">
   	  <h3>muh skilz</h3>
   	  <p>i enjoy frontend coding with these technologies:</p>
   		<ul> 
@@ -20,7 +23,8 @@
   		 <li>CSS</li>
   		 <li>Javascript</li>
   	   </ul> 
-  	<wrapper class="contact">
+ </div> 	   
+ <wrapper class="contact">
   	  <h3>drop me a line sometime</h3>
   	  <p><a href="https://www.linkedin.com/in/matthewnoesen">click here</a> to get in touch with me on LinkedIn!</p>
   	</wrapper>
